# ESPRelayBoard

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.esp32  sdkconfig.esp32-c3  sdkconfig.esp32-c6  sdkconfig.esp32-s3  sdkconfig.old
components/ESP32_NVS/: CMakeLists.txt
components/ESP32_NVS/include/: non_volatile_storage.h
components/ESP32_NVS/src/: non_volatile_storage.c
components/ESP32_NVS_LARGE/: CMakeLists.txt  README.md
components/ESP32_NVS_LARGE/include/: nvs_large.h
components/ESP32_NVS_LARGE/src/: nvs_large.c
components/ca_cert_manager/: CMakeLists.txt  README.md
components/ca_cert_manager/include/: ca_cert_manager.h
components/ca_cert_manager/src/: ca_cert_manager.c
components/net-logging/: net_logging.c  net_logging.h  tcp_client.c  udp_client.c
components/net-logging/assets/: sse.html
main/: CMakeLists.txt  common.h  flags.c  flags.h  hass.c  hass.h  main.c  main.h  mqtt.c  mqtt.h  relay.c  relay.h  settings.c  settings.h  status.c  status.h  web.c  web.h  wifi.c  wifi.h
partition_table/: partition.csv
push_repo/: pyproject.toml
push_repo/push_repo/: esp_ext.py
spiffs/: ca-cert-saving.html  ca-https.crt  ca-mqtts.crt  config.html  firmware-updating.html  relay_table_entry.html  relay_table_header.html  relays.html  static-config.js  static-relays.js  static-shared.js  static-status.js  status.html
util/: make-version.sh  make_version.py  upload_build_to_s3.py
